feat: proper swagger documentation in each CRUD endpoint
